API documentation for Operation for Users which are Registration, Login and Logout
